@@ -15,16 +15,16 @@
   3            11      894377000.00        0        4          0.0080          12        -0.0500             0.05000                  t_c            GPS time of coalescence (s)
   4            22      1.7628              0        4          0.2600          11        -6.9                4.6                      log(d_L)       log of luminosity distance (Mpc)
   5            31      4.5500              0        5          0.5700          21        0.0                 6.28                     alpha          right ascension (rad)
-  6            32      -0.088              0        5          0.1390          11        -0.999999           0.999999                 sin(delta)     sin declination (-)
-  7            51      -0.380              0        5          0.1350          11        -0.999999           0.999999                 cos(i)         inclination (-)
-  8            41      3.1400              0        5          1.5000          21        0.0                 6.28                     phi_c          binary phase at coalescence (rad)
-  9            52      1.5700              0        5          0.1410          22        0.0                 3.14                     psi            polarisation angle (rad)
- 10            71      0.2000              0        4          0.1129          11        1.0e-10             0.999999                 a_spin1        spin magnitude of object 1 (-)
- 11            72      0.9000              0        5          0.1600          11        -0.999999           0.999999                 cos theta1     spin tilt of object 1 (-)
- 12            73      3.1400              0        5          1.5000          21        0.0                 6.28                     phi1           spin phase of object 1 (rad)
- 13            81      0.5001              0        4          0.1129          11        1.0e-10             0.999999                 a_spin2        spin magnitude of object 1 (-)
- 14            82      0.1000              0        5          0.1600          11        -0.999999           0.999999                 cos theta2     spin tilt of object 1 (-)
- 15            83      1.5700              0        5          1.5000          21        0.0                 6.28                     phi2           spin phase of object 1 (rad)
+  6            32      0.8800              0        5          0.1390          11        -0.999999           0.999999                 sin(delta)     sin declination (-)
+  7            51      0.605255            0        5          0.1350          11        -0.999999           0.999999                 cos(i)         inclination (-)
+  8            41      1.5000              0        5          1.5000          21        0.0                 6.28                     phi_c          binary phase at coalescence (rad)
+  9            52      1.2000              0        5          0.1410          22        0.0                 3.14                     psi            polarisation angle (rad)
+ 10            71      0.0001              0        4          0.1129          11        1.0e-10             0.999999                 a_spin1        spin magnitude of object 1 (-)
+ 11            72      0.9999              0        5          0.1600          11        -0.999999           0.999999                 cos theta1     spin tilt of object 1 (-)
+ 12            73      0.0001              0        5          1.5000          21        0.0                 6.28                     phi1           spin phase of object 1 (rad)
+ 13            81      0.0001              0        4          0.1129          11        1.0e-10             0.999999                 a_spin2        spin magnitude of object 1 (-)
+ 14            82      0.9999              0        5          0.1600          11        -0.999999           0.999999                 cos theta2     spin tilt of object 1 (-)
+ 15            83      0.0001              0        5          1.5000          21        0.0                 6.28                     phi2           spin phase of object 1 (rad)
 
   
  ###################################################################################################################################################################################
